# large-data-fastapi-react

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
frontend/: .prettierignore  package.json  tsconfig.json
frontend/src/: App.jsx  index.js
frontend/src/components/Loader/: Loader.css  Loader.jsx
src/: entrypoint.sh  pyproject.toml
src/large_data_api/: dependencies.py  main.py  models.py
src/large_data_api/data/: 10k_random_data.json
src/large_data_api/routers/: data.py  files.py
src/large_data_api/utils/: generate_data.py
